disabling new checkstyle enforcing rule on empty catch() blocks + implementing new recommandation of checsktyle for Boolean (but I believe checsktyle is wrong, I'm sending a bug report to them now).
git-svn-id: http://svn.apache.org/repos/asf/jakarta/cactus/trunk@236414 13f79535-47bb-0310-9956-ffa450edef68